--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -1,8 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Codes</h1>
+code
+<pre><%= @code %></pre>
+sub_code
+<pre><%= @sub_code %></pre>
+lang
+<pre><%= @lang %></pre>
+result
 <pre><%= @result %></pre>
-
 <table>
   <thead>
     <tr>
