edit docker module

--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -3,10 +3,10 @@
 <h1>Codes</h1>
 code
 <pre><%= @code %></pre>
-sub_code
-<pre><%= @sub_code %></pre>
 lang
 <pre><%= @lang %></pre>
+code_path
+<pre><%= @code_path %></pre>
 result
 <pre><%= @result %></pre>
 <table>
