edit docker module

--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Codes</h1>
-code
-<pre><%= @code %></pre>
-lang
-<pre><%= @lang %></pre>
-code_path
-<pre><%= @code_path %></pre>
-result
-<pre><%= @result %></pre>
+<h3>code</h3>
+<%= @code %>
+<h3>lang</h3>
+<%= @lang %>
+<h3>result</h3>
+<%= @result %>
 <table>
   <thead>
     <tr>
