--- a/app/views/codes/_form.html.erb
+++ b/app/views/codes/_form.html.erb
@@ -13,7 +13,12 @@
 
   <div class="field">
     <%= f.label :text %>
-    <%= f.text_area :text %>
+    <%= f.text_field :text %>
+  </div>
+
+  <div class="field">
+    <%= f.label :args %>
+    <%= f.text_field :args %>
   </div>
 
   <div class="field">
